--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "connect-livereload": "^0.5.0",
     "express": "^4.10.1",
     "express-http-proxy": "^0.3.0",
+    "body-parser": "~1.10.1",
     "gulp": "^3.8.5",
     "gulp-cache": "^0.2.0",
     "gulp-if": "^1.2.1",
