added the extjs library

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "normalize-css": "~3.0.1",
-    "jquery": "~1.11.0"
+    "jquery": "~1.11.0",
+    "bower-extjs": "~0.0.4"
   },
   "devDependencies": {}
 }
